k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge6-service
spec:
  selector:
    app: web-c6
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
