k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge6-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: challenge6.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: challenge6-service
            port:
              number: 80
  tls:
    - hosts:
      - challenge6.test.com
      secretName: challenge6-tls
